# allennlp-optuna

./: .allennlp_plugins  .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
alennlp-optuna/commands/: __init__.py
allennlp_optuna/: __init__.py
allennlp_optuna/commands/: __init__.py  best_params.py  retrain.py  tune.py
allenopt/: __init__.py
allenopt/commands/: __init__.py  allenopt.py
config/: hparams.json  imdb_optuna.jsonnet  imdb_optuna_with_pruning.jsonnet  optuna.json
docs/source/: conf.py  index.rst  installation.rst
docs/source/reference/: index.rst
docs/source/reference/commands/: best_params.rst  index.rst  retrain.rst  tune.rst
docs/source/tutorial/: advanced_optuna_configuration.rst  allennlp_configuration.rst  hyperparameter_optimization_at_scale.rst  index.rst  optuna_search_space.rst  run_allennlp_optuna.rst
test_fixtures/config/: classifier.jsonnet  classifier_with_pruning.jsonnet  hparams.json  optuna.json  optuna_without_attribute.json
test_fixtures/data/: train.jsonl  valid.jsonl
tests/commands/: test_tune.py
