[tool.black]
line-length = 99

[tool.poetry]
name = "optuna-allennlp-subcommand"
version = "0.1.0"
description = ""
authors = ["himkt <himkt@cookpad.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
allennlp = "^1.1.0"
optuna = {git = "https://github.com/optuna/optuna", rev = "master"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
