[tool.black]
line-length = 115  # same as allennlp

[tool.poetry]
name = "allenopt"
version = "0.1.0"
description = ""
authors = ["himkt <himkt@cookpad.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
optuna = {git = "https://github.com/optuna/optuna", rev = "master"}
allennlp = ">=1.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.3"
mypy = "^0.782"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
