[tool.black]
line-length = 115  # same as allennlp

[tool.poetry]
name = "allennlp_optuna"
version = "0.1.5"
description = "AllenNLP integration for hyperparameter optimization"
authors = ["himkt <himkt@klis.tsukuba.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.1"
allennlp = "^2.0.0"
optuna = "^2.6.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.3"
mypy = "^0.782"
flake8 = "^3.8.3"
python-language-server = "^0.35.1"
sphinx = "^3.3.0"
sphinx_rtd_theme = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
